# vcalc

./: .gitignore  .ocamlformat  .ocp-indent  Makefile  README.md  dune-project  vcalc.opam
.github/workflows/: workflow.yml
examples/: ex2.in  ex3.in  ex4.in  ex5.in
hooks/: pre-commit.py
src/: ast.ml  dune  interp.ml  lexer.mll  parser.mly  pp.ml  repl.ml
src/ast/: ast.ml  dune
src/exceptions/: dune  exceptions.ml
src/generator/: dune  generator.ml
src/interp/: dune  interp.ml
src/parser/: dune  lex.mll  parse.mly
src/pp/: dune  pp.ml
src/repl/: dune  repl.ml
src/viz/: dune  viz.ml
test/: dune  tests.ml
